--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dva": "^2.6.0-beta.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "umi-request": "^1.2.7"
+    "umi-request": "^1.2.7",
+    "xlsx": "^0.15.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
