--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@types/echarts": "^4.4.1",
     "antd": "^3.19.5",
     "dva": "^2.6.0-beta.6",
+    "echarts": "^4.4.0",
+    "echarts-for-react": "^2.0.15-beta.1",
+    "echarts-wordcloud": "^1.1.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "umi-request": "^1.2.7",
